Header and Footer links fixed. Overflow-x opinions for mobile devices added

--- a/src/components/styles/Main.css
+++ b/src/components/styles/Main.css
@@ -68,7 +68,7 @@
   align-items: center;
   width: 100%;
   height: 300px;
-  overflow: hidden;
+  overflow-y: hidden;
   text-align: center;
 }
 
@@ -242,6 +242,7 @@ Button.simplify__work-button:hover {
 
   .opinions {
     grid-area: opinions;
+    overflow: hidden;
   }
 
   .move__slider {
